--- a/Beating the bookmakers on tennis matches.ipynb
+++ b/Beating the bookmakers on tennis matches.ipynb
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cumulative Net Balanace of Betting"
+    "## Cumulative Net Balance of Betting"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "# Conclusion & Improvements"
    ]
   },
   {
@@ -396,6 +396,48 @@
     "\n",
     "From the results, we might see that matches are predictable to some degree and with more changes in optimization setting and applied method, we might see some nice results."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reflection\n",
+    "\n",
+    "- interesting part of the project was to find the topic that I am interested in - sort of freedom to pick topic that I can focus on\n",
+    "\n",
+    "- challenging part was to set up a code that is reasonable and that run in reasonable time. In R/R Studio I am used to implement more vectorization technique that can improve the speed and maintanability of the code. Here, due to lack of knowledge of Python, these vectorization technique are missing and therefore some part of the code needs to be solved using parallelization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Improvements\n",
+    "\n",
+    "- the project relies heavily on the xgboost with combination of the maximization of the Sharpe Ratio. There are several other technique for example Markowitz portfolio maximization - in this approach the optimization is set up to maximize expected returns with respect to risk profile of the portfolio. Sharpe ratio, on the other hand, It is defined as the difference between the returns of the investment and the risk-free return, divided by the standard deviation of the investment (i.e., its volatility). It represents the additional amount of return that an investor receives per unit of increase in risk.\n",
+    "\n",
+    "- based on the intuition of the current work in this field, I think that the most important part of the betting strategy is to properly estimate underlying probabilities of winning a match.\n",
+    "\n",
+    "- current results are delivered using one-time data realization. We do not do any sampling or validation method in order to estimate the statistical significance of the results. From the first view of the net cumulative profit we see that results might be volatile - so in this sense there needs to be some statistical evaluation. Furthermore, various market segments might be investigated - namely, different tournaments, subsetting only men/women. Those evaluations might discover some more profitable subset of matches. There is probably not better metrics to track the performance of the model like currently used, accuracy and net cumulative profit, but definitely with the combination of the boundaries for expected profit it might provide better picture in terms of expected volatility.\n",
+    "\n",
+    "- features - there is always a space for improvements of the features. Currently, the model relies on the historical performance of the players - there is a space to investigate whether the historical matches 10:50 are enough or it is enough to make the intervals wider.\n",
+    "\n",
+    "- xgboost technigue was implemented due to its widely usage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
