--- a/Beating the bookmakers on tennis matches.ipynb
+++ b/Beating the bookmakers on tennis matches.ipynb
@@ -426,11 +426,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Different models\n",
+    "\n",
+    "in the project we used xgboost for the mdoelling, mostly due to a fact that it is straighforward, computationally reasonable and I have with the model some experience\n",
+    "\n",
+    "nevertheless, other techniques might be used, for example neural networks or lightGBM or H20 deeep learning model. I believe such models would be reasonably next step in the project. The comaprison might be discussed on the three levels:\n",
+    "\n",
+    "- cumulative accuracy on the test sample\n",
+    "- cumulative net profit on the test sampel\n",
+    "- volatility of the estimated net profit\n"
+   ]
   },
   {
    "cell_type": "code",
