--- a/Beating the bookmakers on tennis matches.ipynb
+++ b/Beating the bookmakers on tennis matches.ipynb
@@ -435,7 +435,7 @@
     "\n",
     "nevertheless, other techniques might be used, for example neural networks or lightGBM or H20 deeep learning model. I believe such models would be reasonably next step in the project. The comaprison might be discussed on the three levels:\n",
     "\n",
-    "- cumulative accuracy on the test sample\n",
+    "- cumulative accuracy on the test sample (maybe AUC, logloss etc.)\n",
     "- cumulative net profit on the test sampel\n",
     "- volatility of the estimated net profit\n"
    ]
